Fix distance fix
Optimize distance text for long distance

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -157,7 +157,7 @@
                         </div>
                         <span style="font-size: 1.2em;">
                             <b><span id="valDistance">0.0</span> <sup>nm</sup></b>
-                            / <span id="valTotalDist">0.0</span> <sup>nm</sup>
+                            / <span style="font-size:80%;"><span id="valTotalDist">0.0</span> <sup>nm</sup></span>
                             <button type="button" class="btn btn-light btn-sm" id="btFixDistance" style="margin-bottom: 5px;">...</button>
                         </span>
                         <ul class="list-unstyled mt-3 mb-4" style="margin: 0px 0px !important;">
