Update METAR service URL and add display for METAR observation time

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -190,6 +190,7 @@
                     <div class="card-header py-3 indicator" id="fcatIndicatorOrigin">
                         <span id="valIcaoOrigin">ZBAA</span>
                         Rwy <span id="valRunwayOrigin">36L</span> (<span id="valElevationOrigin">0</span><sup>ft</sup>)<br/>
+                        <span id="valMetarTimeOrigin" style="font-size: 70%;"></span>
                         <span id="valMetarOrigin" style="font-size: 70%;"></span>
                     </div>
                 </div>
@@ -197,6 +198,7 @@
                     <div class="card-header py-3 indicator" id="fcatIndicatorDest">
                         <span id="valIcaoDest">ZBAA</span>
                         Rwy <span id="valRunwayDest">36L</span> (<span id="valElevationDest">0</span><sup>ft</sup>)<br/>
+                        <span id="valMetarTimeDest" style="font-size: 70%;"></span>
                         <span id="valMetarDest" style="font-size: 70%;"></span>
                     </div>
                 </div>
