fix offset in China area, optimize auto-zoom calculation

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -128,6 +128,7 @@
     <script src="js/moment.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap4-toggle.min.js"></script>
+    <script src="js/gcj-transform.js"></script>
 
 </head>
 
