--- a/server/views/ChartTool.ejs
+++ b/server/views/ChartTool.ejs
@@ -12,6 +12,7 @@
     <script src="js/moment.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/gcj-transform.js"></script>
+    <script src="js/Utils.js"></script>
     <style type="text/css">
         html {
             height: 100%;
